--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ matrix:
     - os: linux
       dist: trusty
       sudo: required
-      env: V8_VERSION=6.3.292.48.1
+      env: V8_VERSION=6.3.292.48.1 GEM_ARCH=x86_64-linux
     - os: osx
       osx_image: xcode9.2
-      env: V8_VERSION=6.3.292.48.1
+      env: V8_VERSION=6.3.292.48.1 GEM_ARCH=universal-darwin-16
 
 install: .travis/install.sh
